--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=TheGoldenBook
 APP_ENV=local
 APP_KEY=base64:oC2DoTW3W4Udf5CTHkbQHZ9bdfycAWgoAszr1MGF4T4=
 APP_DEBUG=true
-APP_URL=http://LaravelProject-Biblioteca.test
+APP_URL=http://TheGoldenBook.test
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -28,12 +28,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=a9b24d242c5741
+MAIL_PASSWORD=fab3e69cd38552
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_FROM_ADDRESS=norequest@thegoldenbook.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
