--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=The Golden Book
+APP_NAME="The Golden Book"
 APP_ENV=local
 APP_KEY=base64:oC2DoTW3W4Udf5CTHkbQHZ9bdfycAWgoAszr1MGF4T4=
 APP_DEBUG=true
